# llm.c

./: .gitignore  LICENSE  Makefile  README.md  callgraph  callgraph.dot  cflow_single_two_args.py  cflow_two_args.py  i-train_gpt2-callgraph.dot  i-train_gpt2-callgraph.dot.dot  prepro_tinyshakespeare.py  prepro_tinystories.py  profile_gpt2.cu  profile_gpt2cu.py  requirements.txt  test_gpt2.c  test_gpt2.cu  test_gpt2_fp32.cu  tokenizer.h  train_gpt2.c  train_gpt2.cu  train_gpt2.i  train_gpt2.py  train_gpt2_fp32.cu  utils.h
.github/workflows/: ci.yml
RustMap-Tools/: README.md  Single-File-Scaffolding.md  c-callgraph  c-callgraph.dot  cflow_generation.py  cflow_single_two_args.py  cflow_two_args.py  create_headers.py  find_defines_all_c_h.py  find_defines_single_c_h.py  find_it.py  i-callgraph.dot  i-callgraph.dot.dot  rust_headers_generation.py  scaffolding-singlefile.py  scaffolding.py  subprocess-example.py
RustMap-Tools/backup/: README.md  subprocess-example.py
RustMap-Tools/example/: README.md  example  example.c  example.i
RustMap-Tools/train_gpt2_rs_gpt/: Cargo.toml
RustMap-Tools/train_gpt2_rs_gpt/src/: lib.rs
RustMap-Tools/train_gpt2_rs_gpt/src/headers/: mod.rs  tokenizer.rs  utils.rs
_rs_gpt/: Cargo.toml
dev/: unistd.h
dev/cuda/: Makefile  README.md  adamw.cu  attention_backward.cu  attention_forward.cu  benchmark_on_modal.py  classifier_fused.cu  common.h  crossentropy_forward.cu  crossentropy_softmax_backward.cu  encoder_backward.cu  encoder_forward.cu  (+10 more)
test-globs/: main.c  myProgram  second.c  wrong_example.h
train_gpt2_rs_gpt/: Cargo.toml
(+4 files in other folders)
